--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
   <!-- Centered Water Drop Logo Container -->
   <div class="drop-container">
-    <img src=".png" alt="Water Drop Logo"> <!-- Replace with your own logo -->
+    <img src="img/drop/water1.png" alt="Water Drop Logo"> <!-- Replace with your own logo -->
   </div>
 
   <!-- Header Text -->
