--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       width: 160px;
       height: 160px;
       background: radial-gradient(circle at top, #81d4fa, #03a9f4);
-      border-radius: 50% 50% 60% 60% / 60% 60% 40% 40%;
+      border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
       box-shadow: 
         inset -5px -5px 12px rgba(255, 255, 255, 0.7),
         inset 5px 5px 12px rgba(0, 150, 255, 0.2),
@@ -98,7 +98,7 @@
       background: radial-gradient(circle at top left, #0288d1, #03a9f4);
       color: white;
       border: none;
-      border-radius: 50% 50% 60% 60% / 60% 60% 40% 40%;
+      border-radius: 60% 60% 60% 60% / 60% 60% 60% 60%;
       font-size: 1em;
       font-weight: bold;
       box-shadow:
@@ -140,7 +140,7 @@
 
   <!-- Water Drop 3D Image -->
   <div class="logo-drop">
-    <img src=".img/drop/water1.png" alt="Logo"> <!-- Replace with your image -->
+    <img src="img/drop/water1.png" alt="Logo"> <!-- Replace with your image -->
   </div>
 
   <!-- Header Text -->
