--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
   <!-- Water Drop 3D Image -->
   <div class="logo-drop">
-    <img src="img/drop/water1.png" alt="Logo"> <!-- Replace with your image -->
+    <img src="img/drops/water1.png" alt="Logo"> <!-- Replace with your image -->
   </div>
 
   <!-- Header Text -->
