--- a/login.html
+++ b/login.html
@@ -193,7 +193,7 @@
   <!-- Login Container -->
   <div class="login-container">
     <!-- 3D image inside the semi-circle -->
-    <img src="https://i.imgur.com/G4nH3dv.png" alt="Logo" style="position:absolute;top:-45px;left:calc(50% - 30px);width:60px;height:60px;border-radius:50%;box-shadow:0 4px 15px rgba(0,0,0,0.3);backdrop-filter:blur(4px);">
+    <img src="img/drops/water1.png" alt="Logo" style="position:absolute;top:-45px;left:calc(50% - 30px);width:60px;height:60px;border-radius:50%;box-shadow:0 4px 15px rgba(0,0,0,0.3);backdrop-filter:blur(4px);">
 
     <div class="login-header">Login</div>
 
