--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@
       left: calc(50% - 50px);
       width: 100px;
       height: 100px;
-      background: rgba(255, 255, 255, 0.15);
+      background: #e6fbfd;
       backdrop-filter: blur(5px);
       border-radius: 50%;
       box-shadow: inset -3px -3px 8px rgba(255,255,255,0.3),
@@ -193,7 +193,7 @@
   <!-- Login Container -->
   <div class="login-container">
     <!-- 3D image inside the semi-circle -->
-    <img src="img/drops/water1.png" alt="Logo" style="position:absolute;top:-15px;left:calc(50% - 30px);width:60px;height:60px;border-radius:50%;box-shadow:0 4px 15px rgba(0,0,0,0.3);backdrop-filter:blur(4px);">
+    <img src="img/drops/water1.png" alt="Logo" style="position:absolute;top:-1px;left:calc(50% - 30px);width:60px;height:60px;border-radius:50%;box-shadow:0 4px 15px rgba(0,0,0,0.3);backdrop-filter:blur(4px);">
 
     <div class="login-header">Login</div>
 
