--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
       position: absolute;
       background: radial-gradient(circle, rgba(255,255,255,0.4), rgba(255,255,255,0.1));
       border-radius: 50%;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      box-shadow: inset -3px -3px 6px #ffffff, inset 3px 3px 6px #b2ebf2;
       animation: float 10s infinite linear;
       z-index: 0;
     }
