--- a/login.html
+++ b/login.html
@@ -23,11 +23,11 @@
       position: relative;
       overflow: hidden;
     }
-
+radial-gradient(circle, rgba(255,255,255,0.4), rgba(255,255,255,0.1));
     /* Floating Water Drops */
     .drop {
       position: absolute;
-      background: radial-gradient(circle, rgba(255,255,255,0.4), rgba(255,255,255,0.1));
+      background: #e0f7fa;
       border-radius: 50%;
       box-shadow: inset -3px -3px 6px #ffffff, inset 3px 3px 6px #b2ebf2;
       animation: float 10s infinite linear;
@@ -83,7 +83,7 @@
     }
 
     .login-header {
-      margin-top: -5px;
+      margin-top: 5px;
       font-size: 1.8em;
       font-weight: bold;
       color: #ffffff;
