--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
     /* Floating Water Drops */
     .drop {
       position: absolute;
-      background: #e0f7fa;
+      background: radial-gradient(circle, rgba(255,255,255,0.4), rgba(255,255,255,0.1));
       border-radius: 50%;
       box-shadow: inset -3px -3px 6px #ffffff, inset 3px 3px 6px #b2ebf2;
       animation: float 10s infinite linear;
