--- a/login.html
+++ b/login.html
@@ -83,7 +83,7 @@
     }
 
     .login-header {
-      margin-top: 5px;
+      margin-top: 8px;
       font-size: 1.8em;
       font-weight: bold;
       color: #ffffff;
@@ -160,7 +160,8 @@
       background: rgba(255,255,255,0.1);
       backdrop-filter: blur(8px);
       border-radius: 50%;
-      box-shadow: inset -3px -3px 8px rgba(255,255,255,0.2),
+      box-shadow: inset -3px -3px 6px #ffffff, inset 3px 3px 6px #b2ebf2;
+                  inset -3px -3px 8px rgba(255,255,255,0.2),
                   inset 3px 3px 8px rgba(0,0,0,0.2),
                   4px 4px 12px rgba(0,0,0,0.3);
       display: flex;
