--- a/login.html
+++ b/login.html
@@ -210,9 +210,9 @@
   <!-- Continue With Section -->
   <div class="continue-with">Continue with</div>
   <div class="socials">
-    <div class="social"><img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="Facebook" /></div>
-    <div class="social"><img src="https://cdn-icons-png.flaticon.com/512/270/270798.png" alt="Google" /></div>
-    <div class="social"><img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter" /></div>
+    <div class="social"><img src="img/drops/facebook.png" alt="Facebook" /></div>
+    <div class="social"><img src="img/drops/google.png" alt="Google" /></div>
+    <div class="social"><img src="img/drops/x.png" alt="Twitter" /></div>
   </div>
 
   <script>
