--- a/login.html
+++ b/login.html
@@ -210,9 +210,9 @@
   <!-- Continue With Section -->
   <div class="continue-with">Continue with</div>
   <div class="socials">
-    <div class="social"><img src="img/drops/facebook.png" alt="Facebook" /></div>
-    <div class="social"><img src="img/drops/google.png" alt="Google" /></div>
-    <div class="social"><img src="img/drops/x.png" alt="Twitter" /></div>
+    <div class="social"><img src="img/drops/facebook.png" alt=""/></div>
+    <div class="social"><img src="img/drops/google.png" alt=""/></div>
+    <div class="social"><img src="img/drops/x.png" alt=""/></div>
   </div>
 
   <script>
