--- a/signup.html
+++ b/signup.html
@@ -86,7 +86,7 @@
       margin-top: 8px;
       font-size: 1.8em;
       font-weight: bold;
-      color: #ffffff;
+      color: #feffef;
       margin-bottom: 30px;
     }
 
@@ -201,7 +201,7 @@
     <input type="name" class="input" placeholder="Full Name" />
     <input type="email" class="input" placeholder="Email" />
     <input type="password" class="input" placeholder="Password" />
-    <button class="login-btn">Login</button>
+    <button class="login-btn">Sign Up</button>
 
     <div class="signup-text">
       Already have an account? <span onclick="goToSignUp()">Login</span>
@@ -214,7 +214,9 @@
     <div class="social"><img src="img/drops/facebook.png" alt=""/></div>
     <div class="social"><img src="img/drops/google.png" alt=""/></div>
     <div class="social"><img src="img/drops/x.png" alt=""/></div>
+    <div class="social"><img src="img/drops/linkedin.png" alt=""/></div>
   </div>
+
 
   <script>
     function goToSignUp() {
