--- a/login.html
+++ b/login.html
@@ -213,6 +213,7 @@
     <div class="social"><img src="img/drops/facebook.png" alt=""/></div>
     <div class="social"><img src="img/drops/google.png" alt=""/></div>
     <div class="social"><img src="img/drops/x.png" alt=""/></div>
+    <div class="social"><img src="img/drops/linkedin.png" alt=""/></div>
   </div>
 
   <script>
