--- a/signup.html
+++ b/signup.html
@@ -205,8 +205,9 @@
 
     <div class="signup-text">
       Already have an account? <span onclick="goToSignUp()">Login</span>
+    <span onclick="goToVerification()">Verify</span>
     </div>
-  </div>
+    </div>
 
   <!-- Continue With Section -->
   <div class="continue-with">Continue with</div>
@@ -221,6 +222,9 @@
   <script>
     function goToSignUp() {
       window.location.href = "login.html"; // update if needed
+    }
+    function goToVerification() {
+      window.location.href = "Verification.html"; // update if needed
     }
   </script>
 
