--- a/signup.html
+++ b/signup.html
@@ -224,7 +224,7 @@
       window.location.href = "login.html"; // update if needed
     }
     function goToVerification() {
-      window.location.href = "Verification.html"; // update if needed
+      window.location.href = "verification.html"; // update if needed
     }
   </script>
 
