--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
   <script>
     function goToNextPage() {
-      window.location.href = "login.html"; // Update destination if needed
+      window.location.href = "residentvendor.html"; // Update destination if needed
     }
   </script>
 
