--- a/residentvendor.html
+++ b/residentvendor.html
@@ -188,11 +188,11 @@
     }
 
     function goToResident() {
-      window.location.href = "resident.html"; // Update as needed
+      window.location.href = "login.html"; // Update as needed
     }
 
     function goToVendor() {
-      window.location.href = "vendor.html"; // Update as needed
+      window.location.href = "login.html"; // Update as needed
     }
   </script>
 
