--- a/residentvendor.html
+++ b/residentvendor.html
@@ -42,7 +42,12 @@
     .drop4 { width: 100px; height: 100px; top: 35%; left: 10%; animation-delay: 2s; }
     .drop5 { width: 60px; height: 60px; top: 65%; left: 80%; animation-delay: 4s; }
     .drop6 { width: 45px; height: 45px; top: 20%; left: 55%; animation-delay: 6s; }
+    .drop7 { width: 10px; height: 10px; top: 20%; left: 80%; animation-delay: 9s; }
+    .drop8 { width: 5px; height: 5px; top: 25%; left: 50%; animation-delay: 10s; }
+    .drop9 { width: 20px; height: 20px; top: 40%; left: 90%; animation-delay: 8s; }
+    .drop10 { width: 25px; height: 25px; top: 30%; left: 30%; animation-delay: 7s; }
 
+    
     @keyframes float {
       0% { transform: translateY(0); opacity: 1; }
       100% { transform: translateY(-250px); opacity: 0; }
@@ -61,7 +66,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-bottom: 25px;
+      margin-bottom: 20px;
       z-index: 2;
     }
 
@@ -161,6 +166,10 @@
   <div class="drop drop4"></div>
   <div class="drop drop5"></div>
   <div class="drop drop6"></div>
+  <div class="drop drop7"></div>
+  <div class="drop drop8"></div>
+  <div class="drop drop9"></div>
+  <div class="drop drop10"></div>
 
   <!-- Water Drop Logo -->
   <div class="logo-drop">
@@ -170,9 +179,6 @@
   <!-- Header -->
   <div class="title">AQUA CONNECT</div>
   <div class="subtitle">Find Water Vendors Near You</div>
-
-  <!-- Get Started Button -->
-  <button class="get-started" onclick="goToLogin()">Get Started</button>
 
   <!-- Resident Section -->
   <div class="small-header">Are You A Resident? Order, Track, And Receive Clean Water With Ease</div>
