--- a/residentvendor.html
+++ b/residentvendor.html
@@ -53,6 +53,39 @@
       100% { transform: translateY(-250px); opacity: 0; }
     }
 
+  .ripple-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: 1;
+    pointer-events: none;
+  }
+
+  .ripple {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background: rgba(173, 216, 230, 0.4);
+    border-radius: 50%;
+    transform: scale(0);
+    animation: ripple-effect 5s ease-out forwards;
+    pointer-events: none;
+  }
+
+  @keyframes ripple-effect {
+    0% {
+      transform: scale(1);
+      opacity: 0.8;
+    }
+    100% {
+      transform: scale(50);
+      opacity: 0;
+    }
+  }
+
     .logo-drop {
       width: 160px;
       height: 160px;
