--- a/residentvendor.html
+++ b/residentvendor.html
@@ -233,7 +233,21 @@
     function goToVendor() {
       window.location.href = "login.html"; // Update as needed
     }
-  </script>
+    
+  const rippleContainer = document.getElementById('ripple-container');
+
+  document.body.addEventListener('click', function (e) {
+    const ripple = document.createElement('div');
+    ripple.className = 'ripple';
+    ripple.style.left = `${e.clientX}px`;
+    ripple.style.top = `${e.clientY}px`;
+    rippleContainer.appendChild(ripple);
+
+    setTimeout(() => {
+      ripple.remove();
+    }, 5000);
+  });
+</script>
 
 </body>
 </html>
