--- a/residentvendor.html
+++ b/residentvendor.html
@@ -192,6 +192,8 @@
 </head>
 <body>
 
+  <div class="ripple-container" id="ripple-container"></div>
+
   <!-- Floating Water Drops -->
   <div class="drop drop1"></div>
   <div class="drop drop2"></div>
