--- a/residentvendor.html
+++ b/residentvendor.html
@@ -54,42 +54,41 @@
     }
 
   .ripple-container {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
-    z-index: 1;
     pointer-events: none;
+    z-index: 1;
   }
 
   .ripple {
     position: absolute;
     width: 20px;
     height: 20px;
-    background: rgba(225, 225, 225, 0.4);
+    background: radial-gradient(circle, rgba(173,216,230,0.5) 0%, rgba(0,191,255,0.2) 40%, transparent 70%);
     border-radius: 50%;
     transform: scale(0);
-    animation: ripple-effect 5s ease-out forwards;
-    pointer-events: none;
-    filter: drop-shadow(4px 4px 10px #fff);    
-    text-shadow: -2px -2px 5px #fff;    
-    box-shadow: inset 10px 10px 10px rgba(0, 0, 0, 0.05),    
-             15px 25px 10px rgba(0, 0, 0, 0.05),    
-             15px 20px 20px rgba(0, 0, 0, 0.05),    
-             inset -10px -10px 15px rgba(225, 225, 225, 0.9);    
-             color: #333;
+    animation: ultraRipple 5s ease-out forwards;
+    filter: blur(1px);
   }
 
-  @keyframes ripple-effect {
+  @keyframes ultraRipple {
     0% {
-      transform: scale(1);
+      transform: scale(0.5);
       opacity: 0.8;
+      filter: blur(0.5px);
+    }
+    50% {
+      opacity: 0.5;
+      filter: blur(1px);
     }
     100% {
       transform: scale(50);
       opacity: 0;
+      filter: blur(2px);
     }
   }
 
