--- a/residentvendor.html
+++ b/residentvendor.html
@@ -258,6 +258,7 @@
 </script>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.ripples/0.5.3/jquery.ripples.min.js"></script>
+  
 </body>
 </html>
