--- a/residentvendor.html
+++ b/residentvendor.html
@@ -259,6 +259,13 @@
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.ripples/0.5.3/jquery.ripples.min.js"></script>
-  
+<script>
+  $(document).ready(function(){
+	    $(".ripple-container").ripples({
+        resolution: 200,
+        perturbance: .004,
+    });
+});
+</script>
 </body>
 </html>
