--- a/residentvendor.html
+++ b/residentvendor.html
@@ -198,7 +198,7 @@
 </head>
 <body>
 
-  <div class="ripple-container" id="ripple-container"></div>
+  <div class="ripple-container" id=""></div>
 
   <!-- Floating Water Drops -->
   <div class="drop drop1"></div>
@@ -263,7 +263,7 @@
   $(document).ready(function(){
 	    $(".ripple-container").ripples({
         resolution: 200,
-        perturbance: .004,
+        perturbance: .05,
     });
 });
 </script>
