--- a/residentvendor.html
+++ b/residentvendor.html
@@ -53,16 +53,16 @@
       100% { transform: translateY(-250px); opacity: 0; }
     }
 
-  .ripple-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-    pointer-events: none;
-    z-index: 1;
-  }
+/* Ripple effect background container */
+    .ripple-container {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: linear-gradient(to bottom, #b3e5fc, #e1f5fe);
+      z-index: 0;
+    }
 
   .ripple {
     position: absolute;
