--- a/residentvendor.html
+++ b/residentvendor.html
@@ -73,7 +73,11 @@
       background: linear-gradient(to bottom, #b3e5fc, #e1f5fe);
       z-index: 0;
     }
-
+	  
+.zoomed {
+      transform: scale(1.05);
+    }
+	  
   .ripple {
     position: absolute;
     width: 20px;
