--- a/residentvendor.html
+++ b/residentvendor.html
@@ -211,7 +211,7 @@
   </style>
 </head>
 <body>
-
+<div class="background"></div>
   <div class="ripple-container"></div>
 
   <!-- Floating Water Drops -->
