--- a/residentvendor.html
+++ b/residentvendor.html
@@ -78,16 +78,18 @@
       transform: scale(1.05);
     }
 	  
-  .ripple {
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    background: radial-gradient(circle, rgba(173,216,230,0.5) 0%, rgba(0,191,255,0.2) 40%, transparent 70%);
-    border-radius: 50%;
-    transform: scale(0);
-    animation: ultraRipple 5s ease-out forwards;
-    filter: blur(1px);
-  }
+/* Center content */
+    .center-content {
+      position: relative;
+      z-index: 3;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      text-align: center;
+      padding: 20px;
+    }
 
   @keyframes ultraRipple {
     0% {
@@ -228,7 +230,8 @@
 	<!-- Ripple Container -->
 <div class="ripple-container"></div>
 	
-  <!-- Water Drop Logo -->
+  <!-- Water Drop Logo -->center-content
+  <div class="center-content">
   <div class="logo-drop">
     <img src="img/drops/water1.png" alt="Logo"> <!-- Replace with your image path -->
   </div>
@@ -252,7 +255,7 @@
     $(document).ready(function(){
       $(".ripple-container").ripples({
         resolution: 300,
-        perturbance: 0.03,
+        perturbance: 0.6,
         dropRadius: 20
       });
 
