--- a/residentvendor.html
+++ b/residentvendor.html
@@ -230,7 +230,7 @@
 	<!-- Ripple Container -->
 <div class="ripple-container"></div>
 	
-  <!-- Water Drop Logo -->center-content
+  <!-- Water Drop Logo -->
   <div class="center-content">
   <div class="logo-drop">
     <img src="img/drops/water1.png" alt="Logo"> <!-- Replace with your image path -->
@@ -248,7 +248,7 @@
   <div class="small-header">Are You A Vendor? Manage Orders, Reach Residents, Grow Your Business</div>
   <button class="vendor-btn" onclick="goToVendor()">Vendor</button>
 
-	/* JavaScript */
+	<!-- JavaScript -->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.ripples/0.5.3/jquery.ripples.min.js"></script>
   <script>
@@ -281,15 +281,6 @@
     }
 </script>
 
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.ripples/0.5.3/jquery.ripples.min.js"></script>
-<script>
-  $(document).ready(function(){
-	    $(".ripple-container").ripples({
-        resolution: 200,
-        perturbance: .05,
-    });
-});
-</script>
+
 </body>
 </html>
