--- a/residentvendor.html
+++ b/residentvendor.html
@@ -60,7 +60,7 @@
       left: 0;
       width: 100vw;
       height: 100vh;
-      background: transparent;
+      background: #b3e5fc;
       z-index: 2;
       pointer-events: none;
     }
