--- a/residentvendor.html
+++ b/residentvendor.html
@@ -255,7 +255,7 @@
     $(document).ready(function(){
       $(".ripple-container").ripples({
         resolution: 300,
-        perturbance: 0.6,
+        perturbance: .06,
         dropRadius: 20
       });
 
