--- a/residentvendor.html
+++ b/residentvendor.html
@@ -255,7 +255,8 @@
     $(document).ready(function(){
       $(".ripple-container").ripples({
         resolution: 300,
-        perturbance: .06,
+        perturbance: 0.5,
+	interactive: true,   
         dropRadius: 20
       });
 
