--- a/residentvendor.html
+++ b/residentvendor.html
@@ -29,6 +29,17 @@
       z-index: 0;
     }
 
+.ripple {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background: radial-gradient(circle, rgba(173,216,230,0.5) 0%, rgba(0,191,255,0.2) 40%, transparent 70%);
+    border-radius: 50%;
+    transform: scale(0);
+    animation: ultraRipple 5s ease-out forwards;
+    filter: blur(1px);
+  }
+    
 @keyframes ultraRipple {
     0% {
       transform: scale(0.5);
