--- a/residentvendor.html
+++ b/residentvendor.html
@@ -233,9 +233,10 @@
   <script>
     $(document).ready(function(){
       $(".ripple-container").ripples({
-        resolution: 200,
-        perturbance: 0.05,
+        resolution: 300,
+        perturbance: .05,
         interactive: true,
+        dropRadius: 20
       });
     });
 
