--- a/residentvendor.html
+++ b/residentvendor.html
@@ -197,7 +197,7 @@
 <body>
 
   <!-- Ripple Background -->
-  <div class="ripple-container"></div>
+  <div class="ripple-container" id="ripple-container"></div>
 
   <!-- Floating Water Drops -->
   <div class="drop drop1"></div>
