--- a/residentvendor.html
+++ b/residentvendor.html
@@ -38,6 +38,10 @@
     transform: scale(0);
     animation: ultraRipple 5s ease-out forwards;
     filter: blur(1px);
+    resolution: 200;
+    perturbance: .05;
+    interactive: true;
+    dropRadius: 20;
   }
     
 @keyframes ultraRipple {
