--- a/verification.html
+++ b/verification.html
@@ -2,185 +2,247 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Account Verification</title>
+  <title>Verification</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    /* Reset and base setup */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      background: url('https://i.imgur.com/FuDpT9L.jpg') no-repeat center center/cover;
-      height: 100vh;
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body, html {
+      height: 100%;
       font-family: 'Segoe UI', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      background: linear-gradient(to bottom, #b3e5fc, #e1f5fe);
       position: relative;
       overflow: hidden;
-      flex-direction: column;
     }
 
-    /* Floating drops */
-    .drop {
+    .s-top, .s-bottom {
       position: absolute;
-      background: radial-gradient(circle, rgba(255,255,255,0.4), rgba(255,255,255,0.1));
-      border-radius: 50%;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      animation: float 10s infinite linear;
-      z-index: 0;
+      width: 100%;
+      height: 150px;
+      left: 0;
+      z-index: 1;
     }
 
-    .drop1 { width: 40px; height: 40px; top: 10%; left: 20%; animation-delay: 0s; }
-    .drop2 { width: 60px; height: 60px; top: 50%; left: 70%; animation-delay: 2s; }
-    .drop3 { width: 30px; height: 30px; top: 75%; left: 40%; animation-delay: 4s; }
-    .drop4 { width: 80px; height: 80px; top: 30%; left: 10%; animation-delay: 3s; }
-    .drop5 { width: 50px; height: 50px; top: 80%; left: 80%; animation-delay: 5s; }
-
-    @keyframes float {
-      0% { transform: translateY(0); opacity: 1; }
-      100% { transform: translateY(-300px); opacity: 0; }
+    .s-top {
+      top: 0;
+      background: radial-gradient(circle at bottom, rgba(255,255,255,0.4), transparent);
+      clip-path: path('M 0 0 Q 50 100 100 0 T 200 0 T 300 0 T 400 0 T 500 0 T 600 0 T 700 0 T 800 0 V 0 Z');
     }
 
-    .verify-container {
-      background: rgba(255,255,255,0.1);
-      backdrop-filter: blur(12px);
-      padding: 40px 25px;
-      border-radius: 20px;
-      box-shadow: 10px 10px 30px rgba(0,0,0,0.2), -10px -10px 30px rgba(255,255,255,0.1);
-      text-align: center;
+    .s-bottom {
+      bottom: 0;
+      background: radial-gradient(circle at top, rgba(255,255,255,0.4), transparent);
+      clip-path: path('M 0 150 Q 50 50 100 150 T 200 150 T 300 150 T 400 150 T 500 150 T 600 150 T 700 150 T 800 150 V 150 Z');
+    }
+
+    .container {
+      position: relative;
+      margin: 160px auto;
+      max-width: 90%;
+      width: 400px;
+      background: rgba(255, 255, 255, 0.4);
+      border-radius: 40px;
+      backdrop-filter: blur(10px);
+      padding: 30px 20px;
       z-index: 2;
-      width: 340px;
+      text-align: center;
+      box-shadow: 0 4px 30px rgba(0,0,0,0.1);
     }
 
-    .verify-container h2 {
-      font-size: 1.8em;
+    .top-bar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 10px 20px;
+      position: absolute;
+      top: 30px;
+      width: 100%;
+      z-index: 3;
+    }
+
+    .top-bar h2 {
+      flex: 1;
+      text-align: center;
+      color: #01579b;
       font-weight: bold;
-      color: white;
-      margin-bottom: 25px;
+      font-size: 1.5em;
+    }
+
+    .back-arrow {
+      font-size: 1.8em;
+      cursor: pointer;
+      color: #0277bd;
+    }
+
+    h3 {
+      margin-bottom: 20px;
+      font-size: 1.2em;
+      color: #01579b;
     }
 
     .code-inputs {
       display: flex;
       justify-content: space-between;
-      gap: 15px;
-      margin-bottom: 30px;
+      gap: 10px;
+      margin-bottom: 15px;
     }
 
-    .digit-box {
+    .code-inputs input {
       width: 60px;
-      height: 70px;
-      background: radial-gradient(circle at top, #81d4fa, #03a9f4);
-      border-radius: 50% 50% 60% 60% / 60% 60% 40% 40%;
+      height: 60px;
+      text-align: center;
+      font-size: 1.8em;
+      border: none;
+      border-radius: 20px;
+      background: radial-gradient(circle at top left, #e1f5fe, #b3e5fc);
       box-shadow:
-        inset -4px -4px 8px rgba(255, 255, 255, 0.4),
-        inset 4px 4px 8px rgba(0, 150, 255, 0.2),
-        8px 8px 20px rgba(0, 0, 0, 0.1),
-        -5px -5px 15px rgba(255, 255, 255, 0.3);
-      text-align: center;
-      font-size: 2em;
+        inset -4px -4px 8px rgba(255,255,255,0.6),
+        inset 4px 4px 8px rgba(0,0,0,0.1);
+    }
+
+    .timer {
+      text-align: right;
       font-weight: bold;
-      color: white;
+      font-size: 0.95em;
+      color: #0277bd;
+      margin-bottom: 20px;
     }
 
-    .digit-box input {
-      width: 100%;
-      height: 100%;
-      text-align: center;
-      font-size: 2em;
-      background: transparent;
-      border: none;
-      color: white;
-      outline: none;
+    .small-text {
+      font-size: 0.9em;
+      color: #01579b;
+      margin-bottom: 10px;
     }
 
-    .digit-box input::placeholder {
-      color: rgba(255, 255, 255, 0.5);
-    }
-
-    /* Verify Button */
-    .verify-btn {
-      width: 100%;
-      padding: 15px;
-      font-size: 1.1em;
-      color: white;
-      background: radial-gradient(circle at top left, #0288d1, #03a9f4);
-      border: none;
-      border-radius: 50% 50% 60% 60% / 60% 60% 40% 40%;
+    .resend {
+      font-size: 0.9em;
+      color: #0288d1;
+      text-decoration: underline;
       cursor: pointer;
+      margin-bottom: 25px;
+    }
+
+    .verify-btn {
+      padding: 15px 40px;
+      border: none;
+      font-size: 1em;
+      font-weight: bold;
+      border-radius: 50px;
+      background: radial-gradient(circle at top left, #0288d1, #03a9f4);
+      color: white;
       box-shadow:
         10px 10px 20px #0277bd,
         -10px -10px 20px #4fc3f7,
-        inset -2px -2px 4px rgba(255,255,255,0.3),
-        inset 2px 2px 4px rgba(0,150,255,0.3);
+        inset -3px -3px 6px rgba(255,255,255,0.5),
+        inset 3px 3px 6px rgba(0,150,255,0.3);
+      cursor: pointer;
       transition: all 0.3s ease;
     }
 
     .verify-btn:hover {
-      box-shadow:
-        inset 5px 5px 12px rgba(0,150,255,0.4),
-        inset -5px -5px 12px rgba(255,255,255,0.4);
+      background: radial-gradient(circle at top left, #039be5, #29b6f6);
     }
 
-    @media (max-width: 400px) {
-      .verify-container {
-        width: 90%;
-      }
-      .digit-box {
+    /* Ripple container */
+    .ripple-top, .ripple-bottom {
+      position: absolute;
+      width: 100%;
+      height: 160px;
+      left: 0;
+      pointer-events: none;
+      z-index: 0;
+    }
+
+    .ripple-top {
+      top: 0;
+    }
+
+    .ripple-bottom {
+      bottom: 0;
+    }
+
+    @media (max-width: 480px) {
+      .code-inputs input {
         width: 50px;
-        height: 60px;
-        font-size: 1.6em;
+        height: 50px;
+        font-size: 1.5em;
+      }
+
+      .container {
+        margin: 140px auto;
+        padding: 20px;
+      }
+
+      .verify-btn {
+        padding: 12px 25px;
       }
     }
   </style>
 </head>
 <body>
 
-  <!-- Floating Drops -->
-  <div class="drop drop1"></div>
-  <div class="drop drop2"></div>
-  <div class="drop drop3"></div>
-  <div class="drop drop4"></div>
-  <div class="drop drop5"></div>
+  <!-- Top S curve and ripple -->
+  <div class="s-top"></div>
+  <div class="ripple-top"></div>
 
-  <!-- Verification Container -->
-  <div class="verify-container">
-    <h2>Enter 4-digit Code</h2>
+  <!-- Top Bar -->
+  <div class="top-bar">
+    <div class="back-arrow" onclick="goToSignup()">&#8592;</div>
+    <h2>Verification</h2>
+  </div>
 
+  <!-- Main Container -->
+  <div class="container">
+    <h3>Enter Verification Code</h3>
     <div class="code-inputs">
-      <div class="digit-box"><input type="text" maxlength="1" oninput="moveToNext(this, 'code2')" id="code1" autofocus></div>
-      <div class="digit-box"><input type="text" maxlength="1" oninput="moveToNext(this, 'code3')" id="code2"></div>
-      <div class="digit-box"><input type="text" maxlength="1" oninput="moveToNext(this, 'code4')" id="code3"></div>
-      <div class="digit-box"><input type="text" maxlength="1" id="code4"></div>
+      <input type="text" maxlength="1">
+      <input type="text" maxlength="1">
+      <input type="text" maxlength="1">
+      <input type="text" maxlength="1">
     </div>
-
+    <div class="timer" id="timer">05:00</div>
+    <div class="small-text">We sent a verification code to your email (you@example.com).<br>Check your inbox and confirm it.</div>
+    <div class="resend" onclick="resendCode()">I didn't receive any code? Resend it</div>
     <button class="verify-btn" onclick="verifyCode()">Verify</button>
   </div>
 
+  <!-- Bottom S curve and ripple -->
+  <div class="s-bottom"></div>
+  <div class="ripple-bottom"></div>
+
+  <!-- Ripple Plugin -->
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.ripples/0.5.3/jquery.ripples.min.js"></script>
   <script>
-    function moveToNext(current, nextId) {
-      if (current.value.length === 1) {
-        const next = document.getElementById(nextId);
-        if (next) next.focus();
-      }
+    function goToSignup() {
+      window.location.href = "signup.html";
+    }
+
+    function resendCode() {
+      alert("Verification code resent.");
     }
 
     function verifyCode() {
-      const code1 = document.getElementById("code1").value;
-      const code2 = document.getElementById("code2").value;
-      const code3 = document.getElementById("code3").value;
-      const code4 = document.getElementById("code4").value;
-
-      if (code1 && code2 && code3 && code4) {
-        alert("Code verified!");
-        // window.location.href = "login.html"; // Enable to redirect after success
-      } else {
-        alert("Please enter all 4 digits.");
-      }
+      alert("Code verified.");
     }
+
+    // Timer
+    let time = 300; // 5 mins
+    const timerEl = document.getElementById("timer");
+    const updateTimer = () => {
+      let mins = Math.floor(time / 60);
+      let secs = time % 60;
+      timerEl.textContent = `${mins.toString().padStart(2, '0')}:${secs.toString().padStart(2, '0')}`;
+      if (time > 0) time--;
+    };
+    setInterval(updateTimer, 1000);
+
+    // Apply ripple to top and bottom
+    $(document).ready(function(){
+      $(".ripple-top, .ripple-bottom").ripples({
+        resolution: 256,
+        perturbance: 0.04
+      });
+    });
   </script>
 </body>
 </html>
