--- a/verification.html
+++ b/verification.html
@@ -263,6 +263,22 @@
   </div>
 
   <!-- Main Container -->
+<div class="ripple-container" id="ripple-container"></div>
+
+  <!-- Floating Water Drops -->
+  <div class="drop drop1"></div>
+  <div class="drop drop2"></div>
+  <div class="drop drop3"></div>
+  <div class="drop drop4"></div>
+  <div class="drop drop5"></div>
+  <div class="drop drop6"></div>
+  <div class="drop drop7"></div>
+  <div class="drop drop8"></div>
+  <div class="drop drop9"></div>
+  <div class="drop drop10"></div>
+
+
+  
   <div class="container">
     <h3>Enter Verification Code</h3>
     <div class="code-inputs">
