--- a/login.html
+++ b/login.html
@@ -204,6 +204,8 @@
 
     <div class="signup-text">
       Don't have an account? <span onclick="goToSignUp()">Sign Up</span>
+      Don't have an account? <span onclick="goToDashboard()">Dashboard</span>
+    </div>
     </div>
   </div>
 
@@ -219,6 +221,9 @@
   <script>
     function goToSignUp() {
       window.location.href = "signup.html"; // update if needed
+    }
+    function goToDashboard() {
+      window.location.href = "dashboard.html"; // update if needed
     }
   </script>
 
