--- a/dashboards.html
+++ b/dashboards.html
@@ -44,6 +44,34 @@
       cursor: pointer;
     }
 
+.popup {
+      position: absolute;
+      top: 80px;
+      left: 20px;
+      background: #e0e5ec;
+      border-radius: 20px;
+      padding: 10px;
+      box-shadow: 5px 5px 15px #b8b9be, -5px -5px 15px #ffffff;
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      z-index: 1000;
+    }
+
+    .popup input {
+      display: none;
+    }
+
+    .popup button {
+      margin-top: 10px;
+      padding: 6px 12px;
+      border-radius: 12px;
+      border: none;
+      background: #1e90ff;
+      color: white;
+      cursor: pointer;
+    }
+    
     .notification-icon {
       font-size: 24px;
       color: white;
