--- a/dashboards.html
+++ b/dashboards.html
@@ -213,6 +213,11 @@
 
   <div class="profile-card">
     <div class="profile-row">
+      <div class="popup" id="uploadPopup">
+          <label for="fileInput">Choose image</label>
+          <input type="file" id="fileInput" accept="image/*">
+          <button onclick="saveImage()">Edit Image</button>
+        </div>
       <img src="https://via.placeholder.com/50" class="user-img" id="userImage" />
       <i class="fas fa-bell notification-icon"></i>
     </div>
