--- a/login.html
+++ b/login.html
@@ -223,7 +223,7 @@
       window.location.href = "signup.html"; // update if needed
     }
     function goToDashboard() {
-      window.location.href = "dashboard.html"; // update if needed
+      window.location.href = "track.html"; // update if needed
     }
   </script>
 
